sheets: fix conflict of Value(int) and Value(qsizetype)

qsizetype is equivalent to ssize_t, meaning signed 32bit on 32bit
architectures, and thus this overload conflicts with
Value(qsizetype) version on 32bit architectures.

Hence, to fix the issue disable Value(int) on 32bit architectures,
as its job is already done by Value(qsizetype).

Updates commit 99f4e507a96a98cb95a37f965c6453ca920f15e3.

BUG: 498990